--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "boilerplate",
+  "name": "weather-app",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Dimitris Groumpos",
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
@@ -23,6 +23,7 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-modal": "2.2.2",
+    "react-places-autocomplete": "^6.1.3",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
