--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "normalize.css": "7.0.0",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-loader": "^2.4.3",
     "react-modal": "2.2.2",
     "react-places-autocomplete": "^6.1.3",
     "react-redux": "5.0.5",
